# e-macros

./: COPYRIGHT  Cargo.toml  README.md  lib.bak  lib.bak2
benches/: value_enum_benchmark.rs
docs/: README.en.md  README.zh.md
examples/: debug_display_example.rs  from_example.rs  repr_example.rs  serde_example.rs  value_index_example.rs
src/: lib.rs
src/_value/: enum.rs  mod.rs
tests/: debug.rs  enum_derive_tests.rs  enum_derive_tests2.rs  value_enum.rs  value_enum_debug_dispaly.rs  value_enum_from.rs  value_enum_repr.rs  value_enum_serde.rs  value_enum_value_index.rs  value_from_enum.rs  value_serde_enum.rs
