# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
e-macros = { path = "." }
criterion = "0.5.1"

[[bench]]
name = "value_enum_benchmark"
harness = false

[package]
name = "e-macros"
version = "0.2.1"
description = "Rust macros to simplify and accelerate enum handling: effortless conversion, fast indexing, and painless serialization"
authors = [
  "Eternal Night <EternalNight996@gmail.com, EternalNightYeah2@yeah.net>",
]
edition = "2021"
rust-version = "1.76.0"
homepage = "https://gitee.com/eternalnight996"
license-file = "LICENSE-MIT"
readme = "README.md"
documentation = "https://docs.rs/e-macros"
repository = "https://gitee.com/eternalnight996/e-macros"
include = ["src/", "*.md", "*-LICENSE", "Cargo.toml","docs/","COPYRIGHT"]
keywords = ["macros", "json", "c", "c++", "e-"]
categories = ["development-tools::procedural-macro-helpers"]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
rustdoc-args = ["--cfg", "doc_cfg"]
all-features = true


[[example]]
name = "serde_example"
path = "examples/serde_example.rs"

[[example]]
name = "from_example"
path = "examples/from_example.rs"

[[example]]
name = "repr_example"
path = "examples/repr_example.rs"

[[example]]
name = "debug_display_example"
path = "examples/debug_display_example.rs"
[[example]]
name = "value_index_example"
path = "examples/value_index_example.rs"
